# pynecore

./: .gitignore  pytest.ini
data_provider/: .gitignore  CONTEXT_FOR_LLMS.md  README.md  install_dev.sh  providers.toml.example  pyproject.toml  setup.py
data_provider/data/: ccxt_BYBIT_BTC_USDT_USDT_1D.toml
data_provider/examples/: __init__.py  download_bybit_data.py  download_data.py  simple_usage.py  verify_downloaded_data.py
data_provider/src/pynecore_data_provider/: __init__.py  __main__.py
data_provider/src/pynecore_data_provider/cli/: __init__.py  main.py
data_provider/src/pynecore_data_provider/cli/commands/: __init__.py  data.py
data_provider/src/pynecore_data_provider/core/: __init__.py
data_provider/src/pynecore_data_provider/providers/: __init__.py  capitalcom.py  ccxt.py  provider.py
data_provider/src/pynecore_data_provider/types/: __init__.py
data_provider/src/pynecore_data_provider/utils/: __init__.py
data_provider/tests/: __init__.py  test_import.py
docs/: live_trading_framework.md
learning/: 01_overview.txt  02_ast_transformation_system.txt  03_core_types_system.txt  04_script_execution_model.txt  05_library_system.txt  06_data_flow_and_processing.txt
src/pynecore/cli/: plugin_manager.py  template_engine.py
src/pynecore/cli/commands/: __init__.py  data.py  plugins.py
src/pynecore/cli/templates/plugins/provider/: README.md  providers.toml  pyproject.toml
src/pynecore/cli/templates/plugins/provider/src/{{plugin_name_snake}}_provider/: __init__.py  provider.py
src/pynecore/cli/templates/plugins/provider/tests/: __init__.py  test_provider.py
src/pynecore/providers/: __init__.py
